# dtgma

./: .gitignore  ARXIV_RESULTS.md  CNN_RESULTS_RESNET.md  DTG-MA.tex  DTG_MA_BASELINES_COMPARISON.md  DTG_MA_BENCHMARK_RESULTS.md  DTG_MA_FULL_BENCHMARK.md  DTG_MA_QWEN25_TEXT_DOMAINS_4TASKS.md  DTG_MA_QWEN25_TEXT_DOMAINS_8TASKS.md  README.md  arxiv_cnn_experiments.py  dtgma_baselines_comparison.py  dtgma_full_benchmark.py  dtgma_qwen25_benchmark.py  experiments.py  pyproject.toml
benchmarks/: __init__.py  loaders.py
dtgma/: __init__.py  baselines.py  cnn_backends.py  model.py  training.py
