[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dtgma"
version = "1.0.0"
description = "DTG-MA: Dynamic Task-Graph Masked Attention for Continual Learning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kirichenko Oleg Yu.", email = "urevich55@gmail.com"},
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
benchmarks = [
    "transformers>=4.30.0",
    "torchvision>=0.15.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dtgma*"]
